# unocss

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/: components.d.ts  package.json
docs/integrations/: astro.md
examples/astro/: astro.config.ts  package.json
examples/astro-vue/: astro.config.ts  package.json
packages-integrations/astro/: package.json
packages-integrations/astro/src/: index.ts
packages-integrations/eslint-plugin/: package.json  tsdown.config.ts
packages-integrations/inspector/: package.json  tsdown.config.ts
packages-integrations/inspector/client/: components.d.ts
packages-integrations/language-server/: tsdown.config.ts
packages-integrations/nuxt/: tsdown.config.ts
packages-integrations/runtime/: package.json
packages-integrations/vscode/src/: contextLoader.ts
packages-integrations/webpack/src/: unplugin.ts
packages-integrations/webpack/test/: unplugin.test.ts
packages-integrations/zed/: Cargo.toml  LICENSE  README.md  extension.toml
packages-integrations/zed/src/: lib.rs
packages-presets/preset-icons/: tsdown.config.ts
packages-presets/rule-utils/src/: pseudo.ts
packages-presets/transformer-attributify-jsx/: tsdown.config.ts
packages-presets/transformer-directives/: tsdown.config.ts
packages-presets/unocss/: package.json  tsdown.config.ts
playground/: package.json
playground/src/: components.d.ts
test/: preset-mini.test.ts  preset-wind4.test.ts
test/assets/: preset-wind4-targets.ts
virtual-shared/docs/: package.json
virtual-shared/integration/: package.json
(+12 files in other folders)
